--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -1,77 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MYH.se | Lagar, regler och tillsyn</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/templates/header/headerStyle.css" />
-    <link rel="stylesheet" href="/templates/footer/footer.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/061e52cdfe.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <!--header, banner and breadcrumbs-->
-    <!---->
-    <header class="topHeader">
-      <a href="/index/index.html" aria-label="Till startsidan">
-        <img
-          id="biglogo"
-          src="/templates/header/myh_logo_white_big_shaded.png"
-          alt="myh.se"
-        />
-        <img
-          id="smalllogo"
-          src="/templates/header/myh_logo_white_big_shaded_small.png"
-          alt="myh.se"
-        />
-      </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MYH.se | Lagar, regler och tillsyn</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/templates/header/headerStyle.css" />
+  <link rel="stylesheet" href="/templates/footer/footer.css" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/061e52cdfe.js" crossorigin="anonymous"></script>
+</head>
 
-      <nav aria-label="Huvudmeny">
-        <label for="ham-check" id="hamburger">&#9776;</label>
-        <input type="checkbox" name="ham-check" id="ham-check" />
-        <ul class="navSticky">
-          <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
-          <li class="navItem">
-            <a href="/verksamhetsOmraden/verksamhetsOmraden.html"
-              >Verksamhetsområden</a
-            >
-          </li>
-          <li class="navItem">
-            <a
-              href="/lagarReglerTillsyn/lagarReglerTillsyn.html"
-              class="currentPage"
-              >Lagar, Regler, Tillsyn</a
-            >
-          </li>
-          <li class="navItem">
-            <a href="/statistik/statistik.html">Statistik</a>
-          </li>
-          <li class="navItem">
-            <a href="/publikationer/publikationer.html">Publikationer</a>
-          </li>
-          <li class="navItem">
-            <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
-          </li>
-          <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div role="banner" id="banner">
-      <nav aria-label="Sekundärmeny">
-        <ul>
-          <li>
-            <a aria-label="View this site in English" href="#">In English</a>
-          </li>
-          <li><a href="#">Lättläst</a></li>
-          <li><a href="#">Anpassa</a></li>
-          <li><a href="#">Mina sidor</a></li>
-        </ul>
-      </nav>
+<body>
+  <!--header, banner and breadcrumbs-->
+  <!---->
+  <header class="topHeader">
+    <a href="/index/index.html" aria-label="Till startsidan">
+      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se" />
+      <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se" />
+    </a>
+
+    <nav aria-label="Huvudmeny">
+      <label for="ham-check" id="hamburger">&#9776;</label>
+      <input type="checkbox" name="ham-check" id="ham-check" />
+      <ul class="navSticky">
+        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
+        <li class="navItem">
+          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
+        </li>
+        <li class="navItem">
+          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html" class="currentPage">Lagar, Regler, Tillsyn</a>
+        </li>
+        <li class="navItem">
+          <a href="/statistik/statistik.html">Statistik</a>
+        </li>
+        <li class="navItem">
+          <a href="/publikationer/publikationer.html">Publikationer</a>
+        </li>
+        <li class="navItem">
+          <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
+        </li>
+        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div role="banner" id="banner">
+    <nav aria-label="Sekundärmeny">
+      <ul>
+        <li>
+          <a aria-label="View this site in English" href="#">In English</a>
+        </li>
+        <li><a href="#">Lättläst</a></li>
+        <li><a href="#">Anpassa</a></li>
+        <li><a href="#">Mina sidor</a></li>
+      </ul>
+    </nav>
     <form>
       <label for="searchField">Sök</label>
       <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
@@ -79,143 +63,143 @@
       <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
         Sök</a></button>
     </form>
-    </div>
-    <!--content below-->
-    <main class="grid gap">
-     
-        <section class="col-2-3 card">
-          <ul class="breadcrumbs">
-            <li><a href="#">Start</a></li>
-            <li>Lagar, regler, tillsyn</li>
-          </ul>
-          <h1>Lagar, regler, tillsyn</h1>
-          <div class="img-container">
-            <img
-              src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FIllustrationer%2FParagraf.png&width=584&height=0&method=Box"
-              alt="Lag-symbol"
-            />
-          </div>
-          <p>
-            För alla utbildningsformer finns det lagar och andra bestämmelser
-            som måste följas. Det gäller till exempel hur utbildningarna ska
-            utformas, kursplaner, betygskriterier, examina, tillträde och
-            avgifter
-          </p>
-          <p>
-            Här hittar du delagar och förordningar som reglerar
-            de utbildningsformer som Myndigheten för yrkeshögskolan ansvarar
-            för. Här finns även de föreskrifter som vi har
-            beslutat om, samt de allmäna råd vi har gett ut.
-          </p>
-          <p>
-            Genom tillsyn kontrollerar myndigheten att
-            utbildningarna följer de lagar och regler som gäller. I menyn till
-            höger kan du läsa om hur tillsynen går till och hitta
-            tillsynsbeslut.
-          </p>
-          <p>
-            Om du anser att det finns brister i en utbildning kan du anmäla det
-            till oss. 
-          </p>
-          <a class="button">Anmäl brister i en utbildning</a>
-        </section>
-        <aside class="col1">
-          <section class="link-list card">
-            <h2>Lagar, regler, tillsyn</h2>
-            <ul class="page-nav">
-              <li><a href="#">Lagar och förordningar</a></li>
-              <li><a href="#">Gällande föreskrifter</a></li>
-              <li><a href="#">Allmäna råd</a></li>
-              <li><a href="#">Tillsyn</a></li>
-              <li><a href="#">Kvalitetsgranskning</a></li>
-              <li><a href="#">Anmäl brister i en utbildning</a></li>
-            </ul>
-          </section>
-          <!-- style the link below as a button?-->
-          <!-- <a href="#" class="call-to-action card"
+  </div>
+  <!--content below-->
+  <main class="grid gap">
+
+    <section class="col-2-3 card">
+      <ul class="breadcrumbs">
+        <li><a href="/index/index.html">Start</a></li>
+        <li>Lagar, regler, tillsyn</li>
+      </ul>
+      <h1>Lagar, regler, tillsyn</h1>
+      <div class="img-container">
+        <img
+          src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FIllustrationer%2FParagraf.png&width=584&height=0&method=Box"
+          alt="Lag-symbol" />
+      </div>
+      <p>
+        För alla utbildningsformer finns det lagar och andra bestämmelser
+        som måste följas. Det gäller till exempel hur utbildningarna ska
+        utformas, kursplaner, betygskriterier, examina, tillträde och
+        avgifter
+      </p>
+      <p>
+        Här hittar du delagar och förordningar som reglerar
+        de utbildningsformer som Myndigheten för yrkeshögskolan ansvarar
+        för. Här finns även de föreskrifter som vi har
+        beslutat om, samt de allmäna råd vi har gett ut.
+      </p>
+      <p>
+        Genom tillsyn kontrollerar myndigheten att
+        utbildningarna följer de lagar och regler som gäller. I menyn till
+        höger kan du läsa om hur tillsynen går till och hitta
+        tillsynsbeslut.
+      </p>
+      <p>
+        Om du anser att det finns brister i en utbildning kan du anmäla det
+        till oss.
+      </p>
+      <a class="button">Anmäl brister i en utbildning</a>
+    </section>
+    <aside class="col1">
+      <section class="link-list card">
+        <h2>Lagar, regler, tillsyn</h2>
+        <ul class="page-nav">
+          <li><a href="#">Lagar och förordningar</a></li>
+          <li><a href="#">Gällande föreskrifter</a></li>
+          <li><a href="#">Allmäna råd</a></li>
+          <li><a href="#">Tillsyn</a></li>
+          <li><a href="#">Kvalitetsgranskning</a></li>
+          <li><a href="#">Anmäl brister i en utbildning</a></li>
+        </ul>
+      </section>
+      <!-- style the link below as a button?-->
+      <!-- <a href="#" class="call-to-action card"
             >Anmäl brister i en utbildning</a
           > -->
-          <section class="icons card">
-            <h3>Dela</h3>
-            <ul>
-              <!--fill with font-awesome icons-->
-              <li><i class="fab fa-facebook-f"></i></li>
-              <li><i class="fab fa-twitter"></i></li>
-              <li><i class="far fa-envelope"></i></li>
-            </ul>
-          </section>
-        </aside>
-    
-    </main>
-    <!--footer below-->
-    <footer class="footer">
-      <section class="kontakt-list">
-        <h3>Kontakt</h3>
+      <section class="icons card">
+        <h3>Dela</h3>
         <ul>
-          <li>
-            <h4>Digitalt kundforum</h4>
-            <p>
-              Har du en fråga? Besök vårt kundforum,
-              <a href="#">forum.myh.se</a>
-            </p>
-          </li>
-          <li>
-            <h4>Telefon</h4>
-            <p>
-              Ring vår växel
-              <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
-              vardagar 9.00 - 11.30, 13.00 - 15.00
-            </p>
-          </li>
-          <li>
-            <h4>Press</h4>
-            <p>
-              Presskontakter och pressmeddelanden finns i vårt
-              <a href="nyhetsrum.html">nyhetsrum</a>
-            </p>
-          </li>
-          <li>
-            <h4>E-post</h4>
-            <p>
-              Allmänna frågor / synpunkter:
-              <a href="mailto:info@myh.se">info@myh.se</a>
-              <br />
-              Registrator:
-              <a href="mailto:registrator@myh.se">registrator@myh.se</a>
-            </p>
-          </li>
-          <li>
-            <h4>Adress</h4>
-            <p>
-              Myndigheten för yrkeshögskolan <br />
-              Box 145 <br />
-              721 05 Västerås
-            </p>
-          </li>
+          <!--fill with font-awesome icons-->
+          <li><i class="fab fa-facebook-f"></i></li>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="far fa-envelope"></i></li>
         </ul>
       </section>
-      <section class="about-list-footer">
-        <h3>Om webbplatsen</h3>
-        <ul class="page-nav">
-          <li><a href="#">Använda webbplatsen</a></li>
-          <li><a href="#">Om webbkakor (cookies)</a></li>
-          <li><a href="#">Webbkarta</a></li>
-          <li><a href="#">Tillgänglighetsredogörelse</a></li>
-        </ul>
-        <h3>Våra övriga webbplatser</h3>
-        <ul class="page-nav">
-          <li><a href="#">www.yrkeshogskolan.se</a></li>
-          <li><a href="#">www.konstkulturutbildning.se</a></li>
-          <li><a href="#">www.blitolk.nu</a></li>
-          <li><a href="#">www.seqf.se</a></li>
-        </ul>
-        <h3>Håll dig informerad</h3>
-        <h4>
-          <a><i class="fa fa-youtube"></i> Youtube</a>
-        </h4>
-        <h4>Ansvarig utgivare</h4>
-        <p>Thomas Persson, generaldirektör MYH.</p>
-      </section>
-    </footer>
-  </body>
+    </aside>
+
+  </main>
+  <!--footer below-->
+  <footer class="footer">
+    <section class="kontakt-list">
+      <h3>Kontakt</h3>
+      <ul>
+        <li>
+          <h4>Digitalt kundforum</h4>
+          <p>
+            Har du en fråga? Besök vårt kundforum,
+            <a href="#">forum.myh.se</a>
+          </p>
+        </li>
+        <li>
+          <h4>Telefon</h4>
+          <p>
+            Ring vår växel
+            <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
+            vardagar 9.00 - 11.30, 13.00 - 15.00
+          </p>
+        </li>
+        <li>
+          <h4>Press</h4>
+          <p>
+            Presskontakter och pressmeddelanden finns i vårt
+            <a href="nyhetsrum.html">nyhetsrum</a>
+          </p>
+        </li>
+        <li>
+          <h4>E-post</h4>
+          <p>
+            Allmänna frågor / synpunkter:
+            <a href="mailto:info@myh.se">info@myh.se</a>
+            <br />
+            Registrator:
+            <a href="mailto:registrator@myh.se">registrator@myh.se</a>
+          </p>
+        </li>
+        <li>
+          <h4>Adress</h4>
+          <p>
+            Myndigheten för yrkeshögskolan <br />
+            Box 145 <br />
+            721 05 Västerås
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="about-list-footer">
+      <h3>Om webbplatsen</h3>
+      <ul class="page-nav">
+        <li><a href="#">Använda webbplatsen</a></li>
+        <li><a href="#">Om webbkakor (cookies)</a></li>
+        <li><a href="#">Webbkarta</a></li>
+        <li><a href="#">Tillgänglighetsredogörelse</a></li>
+      </ul>
+      <h3>Våra övriga webbplatser</h3>
+      <ul class="page-nav">
+        <li><a href="#">www.yrkeshogskolan.se</a></li>
+        <li><a href="#">www.konstkulturutbildning.se</a></li>
+        <li><a href="#">www.blitolk.nu</a></li>
+        <li><a href="#">www.seqf.se</a></li>
+      </ul>
+      <h3>Håll dig informerad</h3>
+      <h4>
+        <a><i class="fa fa-youtube"></i> Youtube</a>
+      </h4>
+      <h4>Ansvarig utgivare</h4>
+      <p>Thomas Persson, generaldirektör MYH.</p>
+    </section>
+  </footer>
+</body>
+
 </html>
