--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8" />
@@ -65,7 +65,7 @@
   <main>
     <div class="card intro">
       <ul class="breadcrumbs">
-        <li><a href="#">Start</a></li>
+        <li><a href="/index/index.html">Start</a></li>
         <li>Verksamhetsområden</li>
       </ul>
       <h1>Verksamhetsområden</h1>
