--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/templates/footer/footer.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/061e52cdfe.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>MYH.se | Kontakt</title>
 </head>
 
 <body>
