--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -39,7 +39,7 @@
                 <li class="navItem">
                     <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
                 </li>
-                <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
+                <li class="navItem"><a class="currentPage" href="/kontakt/kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
