adds label for form

--- a/nyhetsRum/nyhetsRum.html
+++ b/nyhetsRum/nyhetsRum.html
@@ -56,10 +56,11 @@
     </nav>
     <form>
       <label for="searchField">Sök</label>
-      <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
+      <input type="search" id="searchField" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
 
       <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
-        Sök</a></button>
+        Sök
+      </button>
     </form>
   </div>
   <div class="hero-img">
