--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8" />
@@ -58,10 +58,11 @@
     </nav>
     <form>
       <label for="searchField">Sök</label>
-      <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
+      <input type="search" id="searchField" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
 
       <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
-        Sök</a></button>
+        Sök
+      </button>
     </form>
   </div>
   <!--content below-->
