--- a/statistik/statistik.html
+++ b/statistik/statistik.html
@@ -57,10 +57,11 @@
     </nav>
     <form>
       <label for="searchField">Sök</label>
-      <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
+      <input type="search" id="searchField" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
 
       <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
-        Sök</a></button>
+        Sök
+      </button>
     </form>
   </div>
   <main id="mainStatistik" class="grid">
@@ -78,7 +79,6 @@
           alt="bild på svenska karta">
       </div>
       <article class="col-2-3">
-
         <p>
           Här hittar du statistik om yrkeshögskoleutbildningar, konst- och kulturutbildningar och utbildningar
           med endast tillsyn samt tolkutbildningar inom folkbildningen.
